--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div class="col-md-12">
       <%= form.label :name %>
-      <%= form.text_field :name, class: 'form-control', autocomplete: 'off' %>
+      <%= form.text_field :name, class: 'form-control', autocomplete: 'off', required: true, autofocus: true %>
     </div>
 
     <input type="hidden" name="apps" id="apps-input">
