--- a/app/views/apps/_edit.html.erb
+++ b/app/views/apps/_edit.html.erb
@@ -1,20 +1,20 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title">Edit Database</h5>
+      <h5 class="modal-title">Add App</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <%= form_with(model: [@campaign, @app, @database], local: false, remote: true) do |form| %>
+    <%= form_with(model: [@campaign, @app], local: false, remote: true) do |form| %>
       <div class="modal-body">
         <div class="row">
-          <% if @database.errors.any? %>
+          <% if @app.errors.any? %>
             <div id="error_explanation">
-              <h2><%= pluralize(@database.errors.count, "error") %> prohibited this database from being saved:</h2>
+              <h2><%= pluralize(@app.errors.count, "error") %> prohibited this app from being saved:</h2>
 
               <ul>
-                <% @database.errors.full_messages.each do |message| %>
+                <% @app.errors.full_messages.each do |message| %>
                   <li><%= message %></li>
                 <% end %>
               </ul>
@@ -31,6 +31,5 @@
         <button class="btn btn-primary">Save</button>
       </div>
     <% end %>
-
   </div>
 </div>
