--- a/app/views/databases/_new.html.erb
+++ b/app/views/databases/_new.html.erb
@@ -23,7 +23,7 @@
 
           <div class="col-md-12">
             <%= form.label :name %>
-            <%= form.text_field :name, class: 'form-control', autocomplete: 'off' %>
+            <%= form.text_field :name, class: 'form-control', autocomplete: 'off', required: true, autofocus: true %>
           </div>
         </div>
       </div>
