--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -1,10 +1,12 @@
 <h2 class="headline-title float-left mb-3">
-  <%= image_tag("apps/#{@app.name}.png", class: 'app-image-headline') %> <%= appSingle(@app.name)['displayName'] %>
+  <% if ActionController::Base.helpers.resolve_asset_path("apps/#{@app.slug}.png").present? %>
+    <%= image_tag("apps/#{@app.slug}.png", class: 'app-image-headline') %>
+  <% end %>
+  <%= @app.name.titleize %>
 </h2>
 
 <div class="webhook-options float-right">
-  <%= link_to raw('<i class="fas fa-plus mr-1"></i> Add Database'), "/new/#{@campaign.slug}/#{@app.slug}/database", {remote: true, class: 'btn btn-primary mr-2', 'data-toggle':  "modal", 'data-target': '#modal-window'}  %>
-  <a href="/campaigns/<%= @campaign.slug %>/edit" class="btn btn-outline-light"><i class="fas fa-cog mr-1"></i> Edit</a>
+  <%= link_to raw('<i class="fas fa-plus mr-1"></i> Add Database'), "/new/#{@campaign.slug}/#{@app.slug}/database", {remote: true, class: 'btn btn-primary', 'data-toggle':  "modal", 'data-target': '#modal-window'}  %>
 </div>
 
 <hr />
@@ -41,7 +43,7 @@
           </td>
           <td class="text-right">
             <div class="dropdown dropleft">
-              <a href="#" role="button" class="dotted-menu" id="campaign-edit-list-<%= database.slug %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="#" role="button" class="dotted-menu" id="campaign-edit-list-<%= database.slug %>" data-toggle="dropdown">
                 <i class="fas fa-ellipsis-v"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="campaign-edit-list-<%= database.slug %>">
