--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,6 +1,8 @@
 <h2 class="headline-title float-left">
-  <%= image_tag("apps/#{@app.name}.png", class: 'app-image-headline') %>
-  <%= appSingle(@app.name)['displayName'] %>
+  <% if ActionController::Base.helpers.resolve_asset_path("apps/#{@app.slug}.png").present? %>
+    <%= image_tag("apps/#{@app.slug}.png", class: 'app-image-headline') %>
+  <% end %>
+  <%= @app.name.titleize %>
   <small class="text-muted"><%= @database.name %></small>
 </h2>
 
