--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to raw('<i class="fas fa-plus mr-1"></i> New Campaign'), new_campaign_path, class: 'btn btn-primary float-right' %>
+<%= link_to raw('<i class="fas fa-plus mr-1"></i> New Campaign'), '/new_campaign', class: 'btn btn-primary float-right', remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
 <h2 class="headline-title">All Campaigns</h2>
 <hr />
 
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-md-5">
         <span class="text-muted">Name</span>
-        <p><a href="/campaigns/<%= campaign.slug %>"><%= campaign.name.capitalize %></a></p>
+        <p><a href="/campaigns/<%= campaign.slug %>"><%= campaign.name.titleize %></a></p>
       </div>
       <div class="col-md-4">
         <span class="text-muted">Updated</span>
@@ -32,7 +32,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="campaign-edit-list-<%= campaign.slug %>">
             <a class="dropdown-item text-muted" href="/campaigns/<%= campaign.slug %>/apps"><i class="far fa-eye mr-1"></i> View</a>
-            <a class="dropdown-item text-muted" href="/campaigns/<%= campaign.slug %>/edit"><i class="far fa-edit mr-1"></i> Edit</a>
+            <a class="dropdown-item text-muted" href="/edit/<%= campaign.slug %>/campaign"  data-remote="true" data-toggle="modal" data-target="#modal-window"><i class="far fa-edit mr-1"></i> Edit</a>
             <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), campaign, method: :delete, data: { confirm: 'Are you sure this will also delete all associated apps and records?' }, class: 'dropdown-item text-muted' %>
           </div>
         </div>
