--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -15,15 +15,15 @@
       </div>
       <div class="col-md-4">
         <span class="text-muted">Updated</span>
-        <p class="mb-2">Last updated <%= time_ago_in_words(campaign.created_at) %></p>
+        <p class="text-small text-muted pt-1"><%= time_ago_in_words(campaign.created_at).capitalize %> ago</p>
       </div>
       <div class="col-md-1">
         <span class="text-muted">Apps</span>
         <p><%= number_to_human(App.where(campaign_id: campaign.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %></p>
       </div>
       <div class="col-md-1">
-        <span class="text-muted">Rows</span>
-        <p>0</p>
+        <span class="text-muted">Databases</span>
+        <p><%= number_to_human(App.includes(:databases).find_by(campaign_id: campaign.id).databases.count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %></p>
       </div>
       <div class="col-md-1 text-right">
         <div class="dropdown dropleft">
