--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -6,29 +6,27 @@
 
 <hr>
 
-<div class="table-simple">
-  <table class="table">
-    <thead>
-      <tr>
-        <th class="table-name">App</th>
-        <th class="table-total">Databases</th>
-        <th style="width: 50px"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @apps.each do |app| %>
-        <tr>
-          <td style="font-size: 1.08em">
-            <% if ActionController::Base.helpers.resolve_asset_path("apps/#{app.slug}.png").present? %>
-              <%= image_tag("apps/#{app.slug}.png", style: 'width: 15px;margin-right: 5px') %>
+<div class="row">
+  <% @apps.each do |app| %>
+    <div class="col-md-12">
+      <div class="card-block card-campaign-item mb-2">
+        <div class="row">
+          <div class="col-md-5">
+            <span class="text-muted">Name</span>
+            <p><% if ActionController::Base.helpers.resolve_asset_path("apps/#{app.slug}.png").present? %>
+              <%= image_tag("apps/#{app.slug}.png", class: 'app-image-headline', style: 'width: 20px;margin-right: 5px') %>
             <% end %>
-            <a href="/campaigns/<%= @campaign.slug %>/<%= app.slug %>"><%= app.name %></a>
-          </td>
-          <td class="table-total text-center">
-            <%= number_to_human(Database.where(app_id: app.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %>
-          </td>
-          <td class="text-right">
+            <a href="/campaigns/<%= @campaign.slug %>/<%= app.slug %>"><%= app.name %></a></p>
+          </div>
+          <div class="col-md-4">
+            <span class="text-muted">Updated</span>
+            <p class="text-small text-muted pt-1"><%= time_ago_in_words(app.created_at).capitalize %> ago</p>
+          </div>
+          <div class="col-md-2">
+            <span class="text-muted">Database</span>
+            <p><%= number_to_human(Database.where(app_id: app.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %></p>
+          </div>
+          <div class="col-md-1 text-right">
             <div class="dropdown dropleft">
               <a href="#" role="button" class="dotted-menu" id="campaign-edit-list-<%= app.slug %>" data-toggle="dropdown">
                 <i class="fas fa-ellipsis-v"></i>
@@ -38,11 +36,12 @@
                 <a class="dropdown-item text-muted" href="/edit/<%= @campaign.slug %>/<%= app.slug %>" data-remote="true" data-toggle="modal" data-target="#modal-window"><i class="far fa-edit mr-1"></i> Edit</a>
                 <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), [@campaign, app], method: :delete, data: { confirm: 'Are you sure this will also delete all associated records?' }, class: 'dropdown-item text-muted' %>
               </div>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 <%= will_paginate @apps, class: 'table_pagination mt-3 mb-3' %>
