--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -15,7 +15,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="table-name">Database</th>
+        <th class="table-name">Name</th>
         <th class="table-total">Rows</th>
         <th class="table-url">Webhook URL</th>
         <th class="table-total">Zapier</th>
