turbo links animate

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -6,7 +6,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="animate-wrapper">
   <% @apps.each do |app| %>
     <div class="col-md-12">
       <div class="card-block card-campaign-item mb-2">
