--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,7 +6,7 @@
 
 <hr />
 
-<div class="row">
+<div class="row" id="animate-wrapper">
   <div class="col-md-4">
     <%= render(StatisticComponent, name: 'Rows', total: @all_requests, max_total: @all_requests_total) %>
   </div>
