--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -11,7 +11,7 @@
 
 <hr />
 
-<div class="table-simple">
+<div class="table-simple" id="animate-wrapper">
   <table class="table">
     <thead>
       <tr>
