--- a/app/views/shared/_table_columns.html.erb
+++ b/app/views/shared/_table_columns.html.erb
@@ -7,7 +7,7 @@
     <div id="popup-content">
       <div id="popup-manage-table" class="tab" style="display: none">
         <a href="#" class="btn btn-sm btn-primary float-right" id="saveTableColumns">Save Changes</a>
-        <a href="#" class="btn btn-sm btn-secondary" id="showAddColumn"><i class="fas fa-plus mr-0"></i></a>
+        <a href="#" class="btn btn-sm btn-secondary" id="showAddColumn"><i class="fas fa-plus"></i> New Column</a>
         <hr>
         <div id="addTableHTML"></div>
         <div id="table-column-list"></div>
