--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,14 +7,17 @@
 <hr />
 
 <div class="row" id="animate-wrapper">
-  <div class="col-md-4">
+  <div class="col-md-3">
     <%= render(StatisticComponent, name: 'Rows', total: @all_requests, max_total: @all_requests_total) %>
   </div>
-  <div class="col-md-4 dashboard-extra-stat">
+  <div class="col-md-3 dashboard-extra-stat">
+    <%= render(StatisticComponent, name: 'Campaigns', total: @all_campaigns, max_total: @all_campaigns_total) %>
+  </div>
+  <div class="col-md-3 dashboard-extra-stat">
     <%= render(StatisticComponent, name: 'Apps', total: @all_apps, max_total: @all_apps_total) %>
   </div>
-  <div class="col-md-4 dashboard-extra-stat">
-    <%= render(StatisticComponent, name: 'Campaigns', total: @all_campaigns, max_total: @all_campaigns_total) %>
+  <div class="col-md-3 dashboard-extra-stat">
+    <%= render(StatisticComponent, name: 'Database', total: '0', max_total: '0') %>
   </div>
 </div>
 
