--- a/app/components/statistic_component.html.erb
+++ b/app/components/statistic_component.html.erb
@@ -1,4 +1,4 @@
 <Statistic class="statistic">
-  <h3 id="statistic-<%= name %>" data-total="<%= total %>">0</h3>
-  <span><%= name %> <small class="float-right mt-1">Total <%= max_total %></small></span>
+  <h3 id="statistic-<%= name.parameterize %>" data-total="<%= total %>">0</h3>
+  <span><%= name %></span>
 </Statistic>
