--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -16,11 +16,12 @@
 <div id="animate-wrapper">
   <div class="row mb-3">
     <div class="col-md-3">
-      <%= render(StatisticComponent, name: 'Rows', total: '0', max_total: '0') %>
+      <%= render(StatisticComponent, name: 'Rows', total: number_with_delimiter(@requests.count)) %>
     </div>
+
     <% @stats['stats'].each do |value| %>
       <div class="col-md-3">
-        <%= render(StatisticComponent, name: "#{value['type'].titleize} of #{value['column'].titleize}", total: '0', max_total: '0') %>
+        <%= render(StatisticComponent, name: "#{value['type'].titleize} of #{value['column'].titleize}", total: "#{number_with_delimiter(Request.where(database_id: @database.id).pluck("data->>'#{value['column']}'").map(&:to_f).reduce(:+))}") %>
       </div>
     <% end %>
     <div class="col-md-3">
