--- a/app/views/requests/_new_total.html.erb
+++ b/app/views/requests/_new_total.html.erb
@@ -21,34 +21,37 @@
             </div>
           <% end %>
 
-          <div class="col-md-12" id="total-manager">
+          <div class="col-md-12" id="total-manager" data-total="<%= @stats.length %>">
             <select id="types_of_totals" name="total_type" class="form-control mb-3">
               <option disabled selected value> -- Select a Total Type -- </option>
-              <option value="sum">Total sum of column</option>
-              <option value="countMatch">Count all if exact match</option>
-              <option value="countContains">Count all if contains</option>
+              <option value="sum">Total Sum</option>
+              <option value="match">Total Exact Match</option>
             </select>
             <div class="card-block mb-3 hide" data-type="sum">
-              <label>Total Sum of Column</label>
-              <input type="text" class="form-control" data-type="sum" data-name="column" placeholder="Column Name" />
+              <select class="form-control mb-2" data-type="sum" data-name="column">
+                <option disabled selected value> -- Select Column -- </option>
+                <% @request.data.each do |value| %>
+                  <option value="<%= value[0] %>"><%= value[0] %> <%= is_numeric?(value[1]) || is_float?(value[1]) ? "(Number)" : "" %></option>
+                <% end %>
+              </select>
+              <input type="text" class="form-control" data-type="sum" data-name="title" placeholder="Title" />
             </div>
-            <div class="card-block mb-3 hide" data-type="countMatch">
-              <label>Count All if Exact Match</label>
-              <input type="text" class="form-control mb-2" data-type="countMatch" data-name="column" placeholder="Column Name" />
-              <input type="text" class="form-control" data-type="countMatch" data-name="string" placeholder="Matches String" />
+            <div class="card-block mb-3 hide" data-type="match">
+              <select class="form-control mb-2" data-type="match" data-name="column">
+                <option disabled selected value> -- Select Column -- </option>
+                <% @request.data.each do |value| %>
+                  <option value="<%= value[0] %>" data-value="<%= value[1] %>"><%= value[0] %></option>
+                <% end %>
+              </select>
+              <input type="text" class="form-control mb-2" data-type="match" data-name="string" placeholder="Matches String" />
+              <input type="text" class="form-control" data-type="match" data-name="title" placeholder="Title" />
             </div>
-            <div class="card-block hide" data-type="countContains">
-              <label>Count All if Contains</label>
-              <input type="text" class="form-control mb-2" name="total_contains_column_name" placeholder="Column Name" />
-              <input type="text" class="form-control" name="total_contains_string" placeholder="Contains String" />
-            </div>
+            <%= form.text_area :stats, class: 'form-control hide', autocomplete: 'off', required: true, autofocus: true %>
           </div>
-
-          <%= form.text_field :stats, class: 'form-control', autocomplete: 'off', required: true, autofocus: true %>
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary">Save</button>
+        <a href="#" class="btn btn-primary" id="saveNewTotal">Save</a>
       </div>
     <% end %>
   </div>
