--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -65,6 +65,7 @@
   max-width: 300px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .table-simple .databases tbody tr td {
